--- a/main.css
+++ b/main.css
@@ -52,10 +52,35 @@ body{
   background-color: #eeee;
 }
 
+.headline {
+  width: 50px;
+  height: 50px;
+  /* height: 50%; */
+  color: white;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+}
+
 .hero-img{
   width: 100vw;
   height: 100vh;
 }
+.wrap{
+  /* position: relative; */
+}
+
+.wrap:before{
+  content: "";
+  position: absolute;
+  /* top: 50px; */
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0,0.6);
+  z-index:999;
+}
+
 
 .second {
   width: 100%;
@@ -130,7 +155,7 @@ body{
 
 .fourth{
   width: 100%;
-  height: 50vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,8 +165,8 @@ body{
 
 .image-box{
   /* margin-top: 30px; */
-  width: 50vw;
-  height: 50vh;
-  border: 20px solid white;
-  background-color: white;
+  width: 50%;
+  height: 50%;
+  border: 1px solid white;
+  background-color: black
 }
