--- a/main.css
+++ b/main.css
@@ -65,35 +65,10 @@ p {
   background-color: #eeee;
 }
 
-.headline {
-  width: 50px;
-  height: 50px;
-  /* height: 50%; */
-  color: white;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-}
-
 .hero-img{
   width: 100%;
   height: 100vh;
 }
-.wrap{
-  /* position: relative; */
-}
-
-.wrap:before{
-  content: "";
-  position: absolute;
-  /* top: 50px; */
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0,0,0,0.6);
-  z-index:999;
-}
-
 
 .second {
   width: 100%;
@@ -168,7 +143,7 @@ p {
 
 .fourth{
   width: 100%;
-  height: 100%;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
