--- a/main.css
+++ b/main.css
@@ -141,38 +141,21 @@ p {
   color: #eeee;
 }
 
-.fourth{
-  width: 100%;
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  color:white;
-}
-
-.image-box{
-  /* margin-top: 30px; */
-  width: 25vw;
-  height: 25vh;
-  border: 20px solid white;
-  background-color: white;
-}
-/* .grid-section {
-
-} */
 .grid-container {
   display: grid;
   height: inherit;
   grid-template-columns: repeat(2, 1fr);
   /* grid-template-rows: repeat(6, auto); */
 }
-/* .grid-text {
-
+.grid-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .grid-image {
 
-} */
+}
 .grid-section {
   height: 300vh;
 }
