--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@ body{
   background-color: black;
   font-family: 'Heebo', sans-serif;
 }
-* {
+/* * {
   border: 1px solid white;
-}
+} */
 
 .section {
   height: 100vh;
@@ -89,11 +89,11 @@ p {
 
 .third {
   width: auto;
-  height: 50vh;
+  height: 100vh;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-image: url("img/second.jpg");
+  background-image: url("img/second-black.jpg");
   background-repeat: no-repeat;
   background-position: left;
   background-color: black;
@@ -110,8 +110,7 @@ p {
   color: #eeee;
   width: 350px;
   height: 350px;
-  margin-top: 15px;
-  margin-right: 100px;
+  margin-right: 180px;
   display: flex;
   flex-direction: column;
   text-align: center;
