--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@ body{
   background-color: black;
   font-family: 'Heebo', sans-serif;
 }
-/* * {
+* {
   border: 1px solid white;
-} */
+}
 
 .section {
   height: 100vh;
