--- a/main.css
+++ b/main.css
@@ -4,10 +4,14 @@ body{
   background-color: black;
   font-family: 'Heebo', sans-serif;
 }
-* {
+/* * {
   border: 1px solid white;
-}
+} */
 
+.logo{
+  width: 50px;
+  height: 50px;
+}
 .section {
   height: 100vh;
 }
@@ -28,6 +32,7 @@ p {
   font-size: 16px;
   color: white;
 }
+
 .header {
   width: 98vw;
   height: 10vh;
@@ -38,8 +43,6 @@ p {
   /* text-align: center; */
   flex-direction: row;
   background-color: black;
-  font-weight: 400;
-  font-size: 20px;
   color: white;
 }
 
@@ -50,7 +53,13 @@ p {
   flex-direction: column;
   flex: 1;
   color: white;
+  font-weight: 500;
 }
+
+.header p:hover{
+  color: #65a1c6;
+}
+
 .logo {
   flex: 2;
 }
@@ -62,7 +71,42 @@ p {
   display: flex;
   justify-content: center;
   /* background-size: cover; */
-  background-color: #eeee;
+  /* background-color: #eeee; */
+}
+
+.headline-box{
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  width: 100%;
+  height: 50%;
+  color: white;
+  font-weight: 700;
+  font-size: 80px;
+  margin-top: 25%;
+  letter-spacing: 13px;
+}
+
+.scroll-down{
+  position: absolute;
+  display: flex;
+  align-self: center;
+  font-weight: bold;
+  color: white;
+  margin-top: 330px;
+}
+
+
+.pil-ner-top{
+  /* position: absolute; */
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  display: flex;
+  align-self: center;
+  font-weight: bold;
+  color: white;
+  margin-top: 360px;
 }
 
 .hero-img{
@@ -163,4 +207,92 @@ p {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
   }
+}
+footer {
+  width: 100%;
+  height: 30vh;
+}
+.footermenu{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.footermenu-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-title{
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.designed-by{
+  font-weight: 100;
+  margin-bottom: -2px;
+}
+
+/* .footermenu-content p{
+  font-weight: 500;
+} */
+.footermenu-content a {
+  /* padding-top: 15px; */
+  color: white;
+  text-decoration: none;
+  font-weight: 100;
+}
+
+.footermenu-content a:hover {
+  color: #65a1c6;
+}
+
+.copyright{
+  font-weight: 100;
+}
+
+.to-top {
+  /* justify-content: flex-start; */
+  font-size: 20px;
+  text-decoration:none;
+  color: white;
+  font-weight: 500;
+}
+
+.to-top:hover{
+  color: #65a1c6;
+}
+
+.arrow {
+  /* background-repeat: no-repeat; */
+  width: 15px;
+  height: 15px;
+  margin-left: 16px;
+}
+
+.arrow.move {
+}
+
+.to-top .arrow {
+  transition: all 0.1s ease-in-out;
+}
+
+.to-top:hover .arrow {
+  transform: translateY(-10px);
+}
+.socialmedia {
+  margin-top: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* flex-direction: row; */
+}
+
+.social-icons{
+  padding: 30px;
+  width: 40px;
+  height: 40px;
 }
