--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@ body{
 /* * {
   border: 1px solid white;
 } */
+video {
+	position: absolute;
+	height: 100vh;
+  max-width: 100%;
+  filter:grayscale(1);
+}
 
 .logo{
   width: 50px;
@@ -35,6 +41,7 @@ p {
 }
 
 .header {
+  background-color: rgba(0,0,0,0);
   width: 98vw;
   height: 10vh;
   position: absolute;
@@ -43,7 +50,7 @@ p {
   align-items: center;
   /* text-align: center; */
   flex-direction: row;
-  background-color: black;
+  /* background-color: black; */
   color: white;
 }
 
@@ -142,6 +149,16 @@ p {
   background-repeat: no-repeat;
   background-position: left;
   background-color: black;
+}
+
+.fourth {
+  height: 100vh;
+  width: auto;
+  margin-bottom: 12%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 /* .second-img{
@@ -309,7 +326,6 @@ p {
   color: white;
   font-size: 2.5vw;
   z-index: 2;
-  background-color: black;
 }
 
 .modal-content {
@@ -352,6 +368,9 @@ p {
 .text-4.active {
   animation-delay: 0.45s;
 }
+.backtotop {
+  margin-right: 120px;
+}
 
 @keyframes text {
   from {
@@ -363,10 +382,29 @@ p {
   }
 }
 
+@keyframes fadein {
+  100% {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+}
+
 @media screen and (max-width: 600px) {
 
   .grid-image {
     width: 100%;
+  }
+  .footermenu {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  video {
+    max-width: 100vw;
+    max-height: 50vh;
+    object-fit:cover;
+    object-position: center;
+  }
+  .fourth {
+    margin: 0;
   }
   .flex-section {
     height: auto;
@@ -392,8 +430,15 @@ p {
   .second-text {
     order: 0;
   }
+  .headline-box {
+    font-size: 60px;
+  }
+}
+.name {
+  padding: 0 50px 0 50px;
 }
 footer {
+
   width: 100%;
   height: 30vh;
 }
@@ -414,6 +459,7 @@ footer {
 .footer-title{
   font-weight: 500;
   font-size: 20px;
+  margin: 0;
 }
 
 .designed-by{
