--- a/main.css
+++ b/main.css
@@ -87,6 +87,10 @@ p {
   letter-spacing: 13px;
 }
 
+.headline-box:hover{
+  color: black;
+}
+
 .scroll-down{
   position: absolute;
   display: flex;
@@ -129,6 +133,11 @@ p {
   font-size: 40px;
   font-weight: bold;
   color: #C4C4C4;
+  letter-spacing: 4px;
+}
+
+.black-text{
+  color: black;
 }
 
 .third {
@@ -208,6 +217,7 @@ p {
     grid-template-rows: repeat(6, 1fr);
   }
 }
+
 footer {
   width: 100%;
   height: 30vh;
