--- a/main.css
+++ b/main.css
@@ -209,10 +209,6 @@ p {
   height: 400px;
   width: 100%;
 }
-/* .second-img{
-  width: 100%;
-  height: 100%;
-} */
 
 .quality-content {
   font-size: 30px;
@@ -232,21 +228,27 @@ p {
   color: #eeee;
   margin-top: 30px;
 }
+.logo2 {
+  transform: scale(1.4);
+}
 
 .button {
+  position: relative;
+  left: 43%;
+  bottom: 10%;
   width: 200px;
   height: 50px;
   padding: 8px;
   margin-top: 25px;
-  border-radius: 10px;
+  border-radius: 7px;
   background-color: #65a1c6;
   display: flex;
   align-self: center;
   /* align-content: center; */
   justify-content: center;
-  font-size: 30px;
-  font-weight: 100;
-  color: #eeee;
+  font-size: 25px;
+  border: 0;
+  color: rgba(255, 255, 255, 1);
 }
 
 .flex-container {
@@ -300,13 +302,13 @@ p {
   display: none;
   z-index: 3;
   position: fixed;
-  right: -2%;
+  right: 0.1%;
   width: 80px;
   height: 80px;
   cursor: pointer;
-  top: 5%;
+  top: 0.1%;
   transform: translate(-50%, -50%);
-  transform: scale(0.6);
+  transform: scale(0.8);
 }
 
 .hamburger {
@@ -419,8 +421,10 @@ p {
 .text-4.active {
   animation-delay: 0.45s;
 }
+
 .backtotop {
   margin-right: 120px;
+  margin-top: 50px;
 }
 
 .designed-by {
@@ -452,8 +456,10 @@ footer {
 
 .footer-title {
   font-weight: 500;
-  font-size: 20px;
+  transform: scale(1.4);
+  /* font-size: 20px; */
   margin: 0;
+  margin-top: 40px;
 }
 
 /* .footermenu-content p{
@@ -530,7 +536,7 @@ footer {
 
 @keyframes fadein {
   100% {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
   }
 }
 
@@ -538,8 +544,15 @@ footer {
   .grid-image {
     width: 100%;
   }
+  .button {
+    left: 23%;
+    margin-bottom: 80px;
+  }
   .socialmedia {
     margin: 0;
+  }
+  .fifth {
+    margin-top: 40px;
   }
   .grid-text {
     padding: 20px;
@@ -564,6 +577,9 @@ footer {
     flex-wrap: wrap;
     flex-direction: column;
   }
+  .footer-title {
+    margin-top: 0;
+  }
   video {
     max-width: 100vw;
     max-height: 50vh;
@@ -587,12 +603,17 @@ footer {
   }
   .icon {
     top: -1%;
+    right: -1%;
     display: block;
+    transform: scale(0.6);
   }
 
   .flex {
     flex-wrap: wrap;
     flex-direction: column;
+  }
+  .second {
+    height: 65vh;
   }
   .second-text {
     order: 0;
@@ -606,7 +627,7 @@ footer {
     flex-direction: column;
   }
   .backtotop {
-    margin-right: 0;
+    margin: 0;
   }
 
   .designed-by {
